# multi-agent-governance

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  SSOT.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/: repository_topics.json  repository_topics.yml  topics.json
.github/workflows/: contracts_check.yml  docs_linkcheck.yml  validate-skills.yml  validate-sop.yml  validate_sop.yml
.mcp/: .env.mcp.example  .mcp-config.yaml  AGENTS.md  SSOT.md
.mcp/cache/: skills_metadata.json
.runs/0223a7c3f72848f2abac5e496c21ddd2/: mcp_calls.jsonl  runs.jsonl  summary.json
.runs/25179198850b4c4bad7054ab6e0d825a/: mcp_calls.jsonl  runs.jsonl  summary.json
.runs/25179198850b4c4bad7054ab6e0d825a/artifacts/: mcp_output.txt
agents/: AGENTS.md  AGENT_REGISTRY.yaml  SSOT.md
agents/contracts/: AGENTS.md  README.md  context_sag_request.schema.json  context_sag_response.schema.json  docs_sag_request.schema.json  docs_sag_response.schema.json  knowledge_request.schema.json  knowledge_response.schema.json  operations_request.schema.json  operations_response.schema.json  prompt_sag_request.schema.json  prompt_sag_response.schema.json  qa_request.schema.json  qa_response.schema.json  quality_sag_request.schema.json  quality_sag_response.schema.json  reference_sag_request.schema.json  reference_sag_response.schema.json  result_envelope.schema.json  workflow_request.schema.json  workflow_response.schema.json
agents/contracts/examples/: README.md  result_envelope.example.json
agents/docs/: AGENTS.md  flow-runner.md  flow.schema.json
agents/docs/specs/: docs-sag.md  knowledge-mag.md
agents/docs/templates/: spec.md  task.md
agents/main-agents/: AGENTS.md
agents/main-agents/knowledge-mag/: AGENTS.md  README.md
agents/main-agents/operations-mag/: AGENTS.md  README.md
agents/main-agents/qa-mag/: AGENTS.md  README.md
agents/main-agents/workflow-mag/: AGENTS.md  README.md
agents/shared/: AGENTS.md
agents/shared/templates/: incident_ticket.json
agents/shared/tooling/: README.md  token_utils.py
agents/sub-agents/: AGENTS.md
agents/sub-agents/browser-sag/: AGENTS.md  README.md
agents/sub-agents/context-sag/: AGENTS.md  README.md
agents/sub-agents/deps-sag/: AGENTS.md  README.md
agents/sub-agents/docs-sag/: AGENTS.md  README.md
agents/sub-agents/governance-sag/: AGENTS.md  README.md
agents/sub-agents/localization-sag/: AGENTS.md  README.md
agents/sub-agents/mcp-sag/: AGENTS.md  README.md
agents/sub-agents/prompt-sag/: AGENTS.md  README.md
agents/sub-agents/quality-sag/: AGENTS.md  README.md
agents/sub-agents/reference-sag/: AGENTS.md  README.md
agents/sub-agents/security-sag/: AGENTS.md  README.md
archive/: AGENTS.md  SSOT.md
collab/: AGENTS.md  SSOT.md
collab/skills-adoption/: governance_sag_meeting_notes_20251019.md  notes.md  signoff_brief_20251019.md
docs/: AGENTS.md  SSOT.md  task_template.md
docs/reference/: AGENTS.md  README.md  overview.md  reference-template.md
docs/reference/agents/: README.md
runtime/: AGENTS.md  SSOT.md
scripts/: AGENTS.md  SSOT.md  cleanup_logs.py  precheck.sh
skills/: ALLOWLIST.txt  PILOT_PLAN.md  README.md  registry.json
skills/_template/: README.md  SKILL.md
skills/api-design/: SKILL.md
skills/document-triage/: SKILL.md
skills/flow-runner-guardrails/: SKILL.md
skills/security-review/: SKILL.md
src/: AGENTS.md  SSOT.md
src/automation/: AGENTS.md  README.md  __init__.py
src/flow_runner/: __init__.py
src/flowrunner/: AGENTS.md  README.md  pyproject.toml
src/flowrunner/src/flow_runner/: __init__.py  cli.py  models.py  runner.py  skills_guard.py
src/flowrunner/src/flow_runner/steps/: agent.py  base.py  mcp.py  shell.py
src/flowrunner/tests/: conftest.py  test_browser_stage.py  test_codex_mcp_manager.py  test_governance_stage.py  test_mcp_step.py  test_prompt_stage.py  test_runner.py  test_skills_guard.py  test_workflow_mag_common.py
src/mcprouter/: AGENTS.md  README.md  pyproject.toml
src/mcprouter/src/mcp_router/: __init__.py  cli.py  config.py  redaction.py  router.py  schemas.py
src/mcprouter/src/mcp_router/providers/: base.py  dummy_provider.py  github_provider.py  openai_provider.py
src/mcprouter/src/mcp_router/skills/: __init__.py  manager.py
src/mcprouter/tests/: test_config.py  test_github_provider.py  test_router.py  test_skills.py
telemetry/: AGENTS.md  SSOT.md
telemetry/reports/: skills_exec_latency_20251019.json  skills_phase1_20251019.json  skills_phase2_20251019.json  skills_token_reduction.json
telemetry/skills/: README.md  events.jsonl  events.schema.json
tests/: test_exec_plan_cli.py
(+306 files in other folders)
