[project]
name = "multi-agent-governance"
version = "0.1.0"
description = "Multi Agent Governance governance stack"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "jsonschema>=4.23,<4.24",
  "jsonschema-specifications>=2024.10.1,<2025",
  "PyYAML>=6.0.2,<7",
  "mcp>=1.9.4,<1.10",
  "pytest>=8.3.3,<9",
  "typer>=0.12.4,<1",
  "pydantic>=2.10.4,<3",
  "python-dotenv>=1.0.1,<2",
  "httpx>=0.27.2,<0.28",
  "pytest-asyncio>=0.23.8,<1",
  "tiktoken>=0.8.0,<0.9",
]

[project.scripts]
precheck = "automation.compliance.pre:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
