[project]
name = "flowrunner"
version = "0.1.0"
description = "CLI flow orchestrator for Flow Runner"
readme = "README.md"
authors = [{ name = "Flow Runner Contributors" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
  "mcprouter>=0.1.0",
  "pyyaml>=6.0.2",
  "pydantic>=2.10.4",
  "python-dotenv>=1.0.1",
  "typer>=0.12.4",
  "rich>=13.9.2",
  "jsonschema>=4.23,<4.24",
  "jsonschema-specifications>=2024.10.1,<2025"
]

[project.scripts]
flowctl = "flow_runner.cli:app"

[project.optional-dependencies]
test = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.23.8",
  "pytest-mock>=3.14.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
