[project]
name = "mcprouter"
version = "0.1.0"
description = "Async queue and provider orchestration layer for Flow Runner"
readme = "README.md"
authors = [{ name = "Flow Runner Contributors" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.2,<0.28",
  "pydantic>=2.10.4",
  "typing-extensions>=4.12.2"
]

[project.scripts]
mcpctl = "mcp_router.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.23.8",
  "anyio>=4.7.0"
]

[project.urls]
Homepage = "https://example.com/flowrunner"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
